--- a/cs.form/cs.form/cs.form.csproj
+++ b/cs.form/cs.form/cs.form.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Button1.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TestButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -58,6 +61,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="testlabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TestTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TextBox1.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
